Added copy rights

--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
             <div class="contact-item">
                 <a href="https://www.linkedin.com/in/h1re5h-r/" target="_blank">
                     <img src="./img/linkin.png" alt="LinkedIn">
-            
                 </a>
             </div>
         </div>
+        <p>&copy; 2023 Hiresh R All rights reserved. | Created by Bhuvaneshwaran.L</p>
     </section>
 
 </body>
