renamed pdf files

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 efficient, and well-organized network infrastructure. In this architecture, a central hub serves as a primary point of connectivity 
                 and control, while multiple spokes connect to the hub to communicate with each other and access shared resources.
             </p>
-            <p>Check out the detailed report <a href="./projects/project1.pdf" target="_blank">here</a>.</p>
+            <p>Check out the detailed report <a href="./projects/DESIGNED A HUB & SPOKE ARCHITECTURE IN AZURE.pdf" target="_blank">here</a>.</p>
         </div>
 
         <div class="project">
@@ -48,7 +48,7 @@
                 Testing Azure VM test failover is a crucial step in ensuring the reliability and effectiveness of your disaster recovery (DR) strategy in Azure.
                 Test failover allows you to simulate a disaster recovery scenario without impacting your production environment
             </p>
-            <p>Check out the detailed report <a href="./projects/project2.pdf" target="_blank">here</a>.</p>
+            <p>Check out the detailed report <a href="./projects/VIRTUAL MACHINE TEST FAILOVER.pdf" target="_blank">here</a>.</p>
         </div>
         
         <div class="project">
@@ -59,7 +59,7 @@
                 virtual network or cloud environment and specific services offered by the cloud provider or other services within the 
                 same cloud environment.
             </p>
-            <p>Check out the detailed report <a href="./projects/project3.pdf" target="_blank">here</a>.</p>
+            <p>Check out the detailed report <a href="./projects/PRIVATE ENDPOINT CONFIGURATION FOR STORAGE ACCOUNTS.pdf" target="_blank">here</a>.</p>
         </div>
         <div class="project">
             <h3>BACKUP USING AZURE MARS AGENT</h3>
@@ -68,7 +68,7 @@
                 offered by Microsoft Azure.This service allows organizations to securely and efficiently back up their on-premises and
                 cloud-based data to Azure's cloud storage infrastructure using the MARS Agent (Microsoft Azure Recovery Services Agent)
             </p>
-            <p>Check out the detailed report <a href="./projects/project4.pdf" target="_blank">here</a>.</p>
+            <p>Check out the detailed report <a href="./projects/BACKUP USING AZURE MARS AGENT.pdf" target="_blank">here</a>.</p>
         </div>
         
         <div class="project">
@@ -79,7 +79,7 @@
                 particularly valuable for organizations that need to provide secure remote access to VMs while distributing incoming network
                 traffic across multiple VM instances
             </p>
-            <p>Check out the detailed report <a href="./projects/project5.pdf" target="_blank">here</a>.</p>
+            <p>Check out the detailed report <a href="./projects/LOAD BALANCER WITH AZURE BASTION.pdf" target="_blank">here</a>.</p>
         </div>
 
     </section>
