fixed fonts and copy rights posistion

--- a/index.html
+++ b/index.html
@@ -127,7 +127,9 @@
                 </a>
             </div>
         </div>
-        <p>&copy; 2023 Hiresh R All rights reserved. | Created by Bhuvaneshwaran.L</p>
+        <div class="container-copy">
+        <p class="copy">&copy; 2023 Hiresh R All rights reserved. | Created by Bhuvaneshwaran.L</p>
+    </div>
     </section>
 
 </body>
