added 4 new projects

--- a/index.html
+++ b/index.html
@@ -85,6 +85,46 @@
             <p>Check out the detailed report <a href="./projects/LOAD BALANCER WITH AZURE BASTION.pdf" target="_blank">here</a>.</p>
         </div>
 
+        <div class="project">
+            <h3>ASSIGNING POLICIES AND ROLES TO ACTIVE</h3>
+            <p>
+                Assigning policies in Azure is a fundamental aspect of managing and enforcing governance and compliance within your cloud environment. 
+                Azure Policy is a service that allows you to define and enforce rules and guidelines for resources deployed in your Azure subscription. 
+                These policies help ensure that your cloud resources adhere to organizational standards, security requirements, and regulatory compliance.
+            </p>
+            <p>Check out the detailed report <a href="./projects/ASSIGNING_POLICIES_AND_ROLES_TO_ACTIVE.pdf" target="_blank">here</a>.</p>
+        </div><div class="project">
+            <h3>DEPLOY A VIRTUAL MACHINE SCALE SET BEHIND A LOAD BALANCER</h3>
+            <p>
+                Deploying a virtual machine scale set behind a load balancer in Azure represents a pivotal strategy for building highly available,
+                scalable, and efficient cloud-based applications. Azure's robust infrastructure and services provide the tools necessary to architect
+                your application for maximum reliability and performance. In this context,a virtual machine scale set acts as a dynamic group of 
+                identically configured virtual machines, while the load balancer evenly distributes incoming network traffic across these instances.
+            </p>
+            <p>Check out the detailed report <a href="./projects/DEPLOY_A_VIRTUAL_MACHINE_SCALE_SET_BEHIND_A_LOAD_BALANCER.pdf" target="_blank">here</a>.</p>
+        </div><div class="project">
+            <h3>CONNECTING ON-PREMISE AD TO AZURE AD</h3>
+            <p>
+                Connecting your on-premises Active Directory (AD) to Azure Active Directory (Azure AD) is a critical step in extending your organization's
+                 identity and access management to the cloud. Azure AD serves as the cloud-based identity and authentication service in Microsoft Azure,
+                 providing a wide range of capabilities for managing user identities, securing access to resources, and enhancing collaboration and productivity.
+            </p>
+            <p>Check out the detailed report <a href="./projects/connecting_on-premise_AD_to_Azure_AD.pdf" target="_blank">here</a>.</p>
+        </div><div class="project">
+            <h3>WEB HOSTING WITH CI/CD PIPELINE USING DEVOPS</h3>
+            <p>
+                Web hosting with a Continuous Integration/Continuous Deployment (CI/CD) pipeline using DevOps represents a dynamic approach to 
+                managing and delivering web applications that is paramount in today's fast-paced digital landscape. This methodology seamlessly
+                 combines web hosting capabilities with the power of DevOps practices,enabling organizations to rapidly and consistently deploy,
+                  update, and maintain their web applications
+            </p>
+            <p>Check out the detailed report <a href="./web_hosing_with_CI-CD_pipeline_usind_devops.pdf" target="_blank">here</a>.</p>
+        </div>
+
+
+
+
+
     </section>
 
     
