Added gitHub contact

--- a/index.html
+++ b/index.html
@@ -175,6 +175,11 @@
                     <img src="./img/linkin.png" alt="LinkedIn">
                 </a>
             </div>
+            <div class="contact-item">
+                <a href="https://github.com/HIRESH-R/" target="_blank">
+                    <img src="./img/GitHub_Logo_White.png" alt="LinkedIn">
+                </a>
+            </div>
         </div>
         <div class="container-copy">
         <p class="copy">&copy; 2023 Hiresh R All rights reserved. | Created by Bhuvaneshwaran.L</p>
