Updated (Final year project)

--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
 
     <section id="projects" class="projects">
         <h2>My Projects</h2>
+        <div class="project">
+            <h3>Native language encryption for secure storage of User credentials in database</h3>
+            <p> 
+                Drawing inspiration from “SM-9”. This project aims to demonstrate a unique and creative approach to password hashing and representation 
+                while maintaining security through established cryptographic techniques. The use of a robust custom character mapping provides an 
+                additional layer of complexity and uniqueness to the representation of hashed passwords and salts. The Tamil alphabet and its phonetic 
+                alignment to form sentences have been utilized to develop robust confidentiality protection techniques for cybersecurity. Confidentiality 
+                protection is one of the essential requirements in cybersecurity.
+            </p>
+            <p>Check out the detailed report <a href="./projects/Final year project.pdf" target="_blank">here</a>.</p>
+        </div>
 
         <div class="project">
             <h3>DESIGNED A HUB & SPOKE ARCHITECTURE IN AZURE</h3>
