Update(Animations,Background image)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Comic+Neue:wght@300;400;700&family=Coming+Soon&family=Macondo&display=swap" rel="stylesheet">
     <title>Hiresh R - Networking and Cloud Enthusiast</title>
 </head>
-<body>
+<body style="background-image:url(./img/0b41253a4041ddb57004d633e4979430.jpg);">
     <header>
         <nav>
             <ul>
@@ -21,7 +21,7 @@
         </nav>
     </header>
 
-    <section id="home" class="home">
+    <section id="home" class="home" style="background-image:url(./img/0b41253a4041ddb57004d633e4979430.jpg);">
         <h2>Welcome to My Portfolio,</h2>
         <div class="Home">
             <p>I'm Hiresh R, an Electronics and Communication Engineering (ECE) graduate with a strong passion for networking and cloud technologies. I'm dedicated to staying at the forefront of technology trends and continuously learning and growing in the field.</p>
