update(background image)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Comic+Neue:wght@300;400;700&family=Coming+Soon&family=Macondo&display=swap" rel="stylesheet">
     <title>Hiresh R - Networking and Cloud Enthusiast</title>
 </head>
-<body style="background-image:url(./img/0b41253a4041ddb57004d633e4979430.jpg);">
+<body >
+    <div style="background-image:url(./img/0b41253a4041ddb57004d633e4979430.jpg);background-repeat:no-repeat;background-attachment: fixed;">
     <header>
         <nav>
             <ul>
@@ -21,7 +22,7 @@
         </nav>
     </header>
 
-    <section id="home" class="home" style="background-image:url(./img/0b41253a4041ddb57004d633e4979430.jpg);">
+    <section id="home" class="home">
         <h2>Welcome to My Portfolio,</h2>
         <div class="Home">
             <p>I'm Hiresh R, an Electronics and Communication Engineering (ECE) graduate with a strong passion for networking and cloud technologies. I'm dedicated to staying at the forefront of technology trends and continuously learning and growing in the field.</p>
@@ -176,7 +177,7 @@
           field
         </p>
     </section>
-
+    </div>
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
         <p>If you'd like to get in touch or connect with me on social media, feel free to reach out:</p>
