--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             </div>
         </div>
         <div class="container-copy">
-        <p class="copy">&copy; 2023 Hiresh R All rights reserved. | Created by Bhuvaneshwaran.L</p>
+        <p class="copy">&copy; 2023 Hiresh R All rights reserved. | Created by Bhuvaneshwaran.L and Dhanush.S</p>
     </div>
     </section>
 
