--- a/index.html
+++ b/index.html
@@ -21,12 +21,16 @@
         </nav>
     </header>
 
-    <section id="home" class="home" style="background-image:url(./img/0b41253a4041ddb57004d633e4979430.jpg);background-repeat:no-repeat;background-attachment: fixed;">
-        <h2>Welcome to My Portfolio,</h2>
-        <div class="Home">
-            <p>I'm Hiresh R, an Electronics and Communication Engineering (ECE) graduate with a strong passion for networking and cloud technologies. I'm dedicated to staying at the forefront of technology trends and continuously learning and growing in the field.</p>
-            <p>My goal is to leverage my technical skills and knowledge to create innovative solutions in the world of networking and cloud computing.</p>
-            <p>Explore my portfolio to see some of my projects and accomplishments in this exciting domain. Feel free to reach out if you'd like to connect, collaborate, or learn more about my work.</p>
+    <section class="Home" style="background-image: url(./img/0b41253a4041ddb57004d633e4979430.jpg); background-repeat: no-repeat; background-attachment: fixed;">
+        <div class="content-wrapper">
+            <div class="text-content">
+                <p>I'm Hiresh R, an Electronics and Communication Engineering (ECE) graduate with a strong passion for networking and cloud technologies. I'm dedicated to staying at the forefront of technology trends and continuously learning and growing in the field.</p>
+                <p>My goal is to leverage my technical skills and knowledge to create innovative solutions in the world of networking and cloud computing.</p>
+                <p>Explore my portfolio to see some of my projects and accomplishments in this exciting domain. Feel free to reach out if you'd like to connect, collaborate, or learn more about my work.</p>
+            </div>
+            <div class="image-content">
+                <img src="./img/linkin.png" alt="profile img" class="profile-image">
+            </div>
         </div>
     </section>
     </section>
