HTML Update Commit

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#certi">Certificates & Badges</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="#achieve">Achievements & Accomplishments</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -24,9 +25,10 @@
     <section class="Home" style="background-image: url(./img/0b41253a4041ddb57004d633e4979430.jpg); background-repeat: no-repeat; background-attachment: fixed;">
         <div class="content-wrapper">
             <div class="text-content">
-                <p>I'm Hiresh R, an Electronics and Communication Engineering (ECE) graduate with a strong passion for networking and cloud technologies. I'm dedicated to staying at the forefront of technology trends and continuously learning and growing in the field.</p>
-                <p>My goal is to leverage my technical skills and knowledge to create innovative solutions in the world of networking and cloud computing.</p>
-                <p>Explore my portfolio to see some of my projects and accomplishments in this exciting domain. Feel free to reach out if you'd like to connect, collaborate, or learn more about my work.</p>
+                <p>Hey, IM HIRESH As a highly motivated and enthusiastic personnel, I am eager to gain experience and expand my skills in the dynamic field of Cyber Security.</p><br>
+                <p>I am committed to staying up-to-date with the latest trends and developments in my industry and am always seeking out new learning opportunities to enhance my knowledge and expertise.</p><br>
+                <p>I see myself as a techie, gamer and passionate about computer technologies and hardware (●'◡'●)</p><br>
+                <p>I am excited to connect with like-minded professionals and explore new opportunities to further my career and make a positive impact in the field.</p>
             </div>
             <div class="image-content">
                 <img src="./img/linkin.png" alt="profile img" class="profile-image">
@@ -196,7 +198,7 @@
             </div>
         </div>
         <div class="container-copy">
-        <p class="copy">&copy; 2023 Hiresh R All rights reserved. | Created by Bhuvaneshwaran.L and Dhanush.S</p>
+        <p class="copy">&copy; 2023  Hiresh R All rights reserved. | Created by Bhuvaneshwaran.L and Dhanush.S</p>
     </div>
     </section>
 
